# remote-robot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: commit-and-push.md
examples/: jetbot_gradio_ui.py  jetbot_local_control.py  run_jetbot_server.py  run_so101_server.py  so101_gradio_ui.py  so101_remote_control.py
src/remote_robot/: __init__.py
src/remote_robot/robots/: __init__.py  jetbot.py  jetbot_config.py  jetbot_remote.py  so101_remote.py
src/remote_robot/server/: __init__.py  base.py  jetbot_server.py  so101_server.py
src/remote_robot/utils/: __init__.py  remote_client.py  serialization.py
tests/: __init__.py
